fix for iphone header wrap

--- a/src/scss/cagov/site-header.scss
+++ b/src/scss/cagov/site-header.scss
@@ -52,6 +52,7 @@
       color: black;
       background-image: none;
       display: inline-block;
+      max-width: 100%;
       &:focus {
         @include outline(2px);
       }
